# suse-get-maintainers

./: .gitignore  GitHelpers.cpp  GitHelpers.h  Maintainers.cpp  Maintainers.h  Makefile  OutputFormatter.h  PathsOrPeople.h  Pattern.cpp  Pattern.h  Person.cpp  Person.h  README.md  Stanza.h  compile_commands.json  curl.h  cve2bugzilla.h  cves.h  git2.h  helpers.h  libsqlite3.h  maintainers.h  meson.build  meson.options  suse-get-maintainers.1  suse-get-maintainers.cc  temporary.h
exp-suse-add-cves/: Makefile  curl.h  cve2bugzilla.h  cves.h  git2.h  meson.build  suse-add-cves.1  suse-add-cves.cc
exp-suse-add-cves/packaging/: make_tarball.sh  prepare_rpm_test.sh  suse-add-cves.changes  suse-add-cves.spec
packaging/: TODO.get-maintainers  emacs.el  make_tarball.sh  prepare_rpm_test.sh  suse-get-maintainers.changes  suse-get-maintainers.spec
tests/: meson.build  test_curl.cpp  test_maintainers.cpp
